# async-google-gemini

./: Cargo.toml  README.md
examples/chat/: Cargo.toml
examples/chat-stream/: Cargo.toml
examples/chat-stream/src/: main.rs
examples/chat/src/: main.rs
examples/claude-raw-predict/: Cargo.toml
examples/claude-raw-predict/src/: main.rs
examples/claude-stream-raw-predict/: Cargo.toml
examples/claude-stream-raw-predict/src/: main.rs
examples/gemini-generate-content/: Cargo.toml
examples/gemini-stream-generate-content/: Cargo.toml
src/: chat.rs  claude.rs  client.rs  config.rs  error.rs  gemini.rs  lib.rs
src/types/: chat_request.rs  chat_response.rs  claude.rs  content.rs  gemini.rs  mod.rs  model.rs  schema.rs  tools.rs
