[package]
name = "async-google-gemini"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
derive_builder = "0.20.1"
futures = "0.3.30"
gcp_auth = "0.12.3"
reqwest = { version = "0.12.7", features = [
  "json",
  "stream",
  "multipart",
  "hickory-dns",
] }
reqwest-eventsource = "0.6.0"
reqwest-streams = "0.8.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
trust-dns-resolver = { version = "0.23.2", features = ["tokio"] }
